# fastsqrt

./: .best.txt.swp  Cargo.toml  TODO.txt  best.txt  plot_approx.py
src/: approx.rs  main.rs  minihist.rs
