[package]
name = "isqrt"
version = "0.1.0"
authors = ["David S. Smith <david.smith@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
rand = "*"
rand_distr = "*"
rand_pcg = "0.3.0"
rayon = "*"
